<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:fontFamily="@font/martel_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#CCC"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="@string/total_deaths" />

            <TextView

                android:id="@+id/alltotalDeaths_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="-"
                android:textColor="#000"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="@string/total_cases" />

            <TextView

                android:id="@+id/alltotalCases_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="-"
                android:textColor="#000"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="@string/total_recovered" />

            <TextView
                android:id="@+id/alltotalRecovered_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/martel_bold"
                android:gravity="center"
                android:text="-"
                android:textColor="#000"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="#EAC4C4"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/coronaNews_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/corona_news"
            android:textSize="28sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#F1F09D"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/countryData_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/country_data"
            android:textSize="28sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#B7FFB2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/continentData_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/continent_data"
            android:textSize="28sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>