<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activities.DataDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dataTitle_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/data_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/total_cases" />

        <TextView
            android:id="@+id/totalCases_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/new_cases" />

        <TextView
            android:id="@+id/newCases_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/total_deaths" />

        <TextView
            android:id="@+id/totalDeaths_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/new_deaths" />

        <TextView
            android:id="@+id/newDeaths_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/total_recovered" />

        <TextView
            android:id="@+id/totalRecovered_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/active_cases" />

        <TextView
            android:id="@+id/activeCases_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/martel_bold"
            android:gravity="center"
            android:text="@string/hyphen"
            android:textColor="#000"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>